--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
+
+
+.header-wrapper {
+  position:relative;
+  background: url(26323.jpg) no-repeat;
+  background-size: cover;
+  background-position:center;
+  height: 90vh;
+}
+
+
+
+:root{
+  --primary-white: #fff;
+  --primary-green: rgb(45, 209, 45);
+}
+
+.navbar-nav > li > a {
+  color: var(--primary-green) !important;
+  text-transform: uppercase;
+  margin: 20px;
+}
+
+.nav-link{
+  color: var(--primary-green) !important;
+
+
+}
+
+body{
+  font-family: "Roboto Condensed" sans-serif;
+  background-color: #282c34;
+
+}
+
+h{
+  font-size: large;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-align: right;
+}
+
 .App {
   text-align: center;
 }
