--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -23,6 +23,7 @@ body{
     font-family: Arial, sans-serif;
     font-size: 14px;
     text-align: left;
+    border-bottom: 1px solid black;
   }
   
   th, td {
@@ -31,10 +32,10 @@ body{
   }
   
   thead th {
-    background-color: #f2f2f2;
+    background-color: rgb(45, 209, 45);
     color: #333;
   }
   
   tbody tr:hover {
-    background-color: #f5f5f5;
+    background-color: rgb(45, 209, 45);
   }
